%%{init: {"theme": "default"}}%%
erDiagram

    %% ============================================================
    %% RBAC
    %% ============================================================

    roles {
        uuid        id          PK
        varchar     name        UK  "admin | lecturer | student"
        text        description
        boolean     is_system       "system roles không xóa được"
        timestamptz created_at
    }

    permissions {
        uuid        id          PK
        varchar     name        UK  "user:create | ai:chat-rag | ..."
        text        description
        timestamptz created_at
    }

    role_permissions {
        uuid        role_id     FK
        uuid        permission_id FK
    }

    %% ============================================================
    %% USERS & AUTH
    %% ============================================================

    users {
        uuid        id          PK
        varchar     email       UK
        varchar     password_hash
        varchar     full_name
        uuid        role_id     FK
        varchar     status          "active | suspended"
        uuid        created_by  FK  "self-ref: admin who created"
        timestamptz created_at
        timestamptz updated_at
    }

    refresh_tokens {
        uuid        id          PK
        uuid        user_id     FK
        varchar     token_hash  UK
        timestamptz expires_at
        timestamptz revoked_at      "NULL = còn hiệu lực"
        timestamptz created_at
    }

    %% ============================================================
    %% SUBJECTS
    %% ============================================================

    subjects {
        uuid        id          PK
        varchar     code        UK  "SWD392, PRN231"
        varchar     name
        text        description
        varchar     status          "active | inactive"
        uuid        created_by  FK
        timestamptz created_at
        timestamptz updated_at
    }

    subject_lecturers {
        uuid        subject_id  FK
        uuid        lecturer_id FK
        uuid        assigned_by FK
        timestamptz assigned_at
    }

    subject_enrollments {
        uuid        subject_id  FK
        uuid        student_id  FK
        timestamptz enrolled_at
    }

    %% ============================================================
    %% DOCUMENTS
    %% ============================================================

    documents {
        uuid        id              PK
        uuid        subject_id      FK
        varchar     original_name
        varchar     stored_path
        varchar     mime_type
        integer     file_size_bytes
        varchar     status              "processing | ready | failed"
        integer     chunk_count         "số vectors trong Qdrant"
        text        error_message
        uuid        uploaded_by     FK
        timestamptz created_at
        timestamptz updated_at
    }

    %% ============================================================
    %% CHAT & RAG
    %% ============================================================

    chats {
        uuid        id          PK
        uuid        user_id     FK
        uuid        subject_id  FK
        varchar     title
        timestamptz created_at
        timestamptz updated_at
    }

    messages {
        uuid        id          PK
        uuid        chat_id     FK
        varchar     role            "user | assistant"
        text        content
        jsonb       sources         "[{documentId, originalName, excerpt, score}]"
        timestamptz created_at
    }

    %% ============================================================
    %% AI USAGE & SYSTEM
    %% ============================================================

    ai_usage_logs {
        uuid        id          PK
        uuid        user_id     FK
        varchar     feature         "chat_rag | generate_flashcard | generate_exam"
        date        used_date
        integer     count
    }

    system_settings {
        varchar     key         PK  "ai_daily_limit.student.chat_rag"
        jsonb       value
        text        description
        uuid        updated_by  FK
        timestamptz updated_at
    }

    audit_logs {
        uuid        id              PK
        uuid        user_id         FK
        varchar     action              "USER_LOGIN | DOCUMENT_UPLOAD | ..."
        varchar     resource_type
        uuid        resource_id
        jsonb       details
        varchar     ip_address
        timestamptz created_at
    }

    %% ============================================================
    %% FLASHCARDS (Full Spec)
    %% ============================================================

    flashcard_sets {
        uuid        id          PK
        uuid        subject_id  FK
        varchar     title
        text        description
        boolean     is_public
        uuid        created_by  FK
        timestamptz created_at
        timestamptz updated_at
    }

    flashcards {
        uuid        id          PK
        uuid        set_id      FK
        text        front           "câu hỏi / từ khoá"
        text        back            "đáp án / giải thích"
        integer     position
        timestamptz created_at
    }

    %% ============================================================
    %% EXAMS (Full Spec)
    %% ============================================================

    exams {
        uuid        id               PK
        uuid        subject_id       FK
        varchar     title
        text        description
        varchar     type                 "official | ai_generated"
        varchar     difficulty           "easy | medium | hard"
        integer     duration_minutes     "0 = không giới hạn"
        integer     question_count
        boolean     is_public
        uuid        created_by       FK
        timestamptz created_at
        timestamptz updated_at
    }

    questions {
        uuid        id              PK
        uuid        exam_id         FK
        text        content
        jsonb       options             '[{"key":"A","text":"..."}]'
        varchar     correct_answer      "A | B | C | D"
        text        explanation
        integer     position
    }

    exam_attempts {
        uuid        id              PK
        uuid        exam_id         FK
        uuid        user_id         FK
        jsonb       answers             '{"<qId>": "A"}'
        decimal     score               "0.00 - 10.00"
        integer     total_questions
        integer     correct_count
        varchar     status              "in_progress | completed | abandoned"
        timestamptz started_at
        timestamptz completed_at
        integer     time_spent_secs
    }

    %% ============================================================
    %% BOOKMARKS (Full Spec)
    %% ============================================================

    bookmarks {
        uuid        id              PK
        uuid        user_id         FK
        varchar     resource_type       "document | flashcard_set | exam | message"
        uuid        resource_id         "polymorphic ref"
        text        note
        timestamptz created_at
    }

    %% ============================================================
    %% RELATIONSHIPS
    %% ============================================================

    %% RBAC
    roles           ||--o{    role_permissions     : "has"
    permissions     ||--o{    role_permissions     : "in"
    roles           ||--o{    users               : "assigned to"

    %% Auth
    users           ||--o{    refresh_tokens      : "has"
    users           ||--o{    users               : "created by (self-ref)"

    %% Subjects
    users           ||--o{    subjects            : "created by"
    subjects        ||--o{    subject_lecturers   : "taught by"
    users           ||--o{    subject_lecturers   : "teaches"
    subjects        ||--o{    subject_enrollments : "enrolled in"
    users           ||--o{    subject_enrollments : "enrolls"

    %% Documents
    subjects        ||--o{    documents           : "contains"
    users           ||--o{    documents           : "uploads"

    %% Chats
    users           ||--o{    chats               : "owns"
    subjects        ||--o{    chats               : "has"
    chats           ||--o{    messages            : "contains"

    %% System
    users           ||--o{    ai_usage_logs       : "tracked"
    users           ||--o{    audit_logs          : "generates"
    users           ||--o{    system_settings     : "updates"

    %% Flashcards
    subjects        ||--o{    flashcard_sets      : "has"
    users           ||--o{    flashcard_sets      : "creates"
    flashcard_sets  ||--o{    flashcards          : "contains"

    %% Exams
    subjects        ||--o{    exams               : "has"
    users           ||--o{    exams               : "creates"
    exams           ||--o{    questions           : "has"
    exams           ||--o{    exam_attempts       : "attempted via"
    users           ||--o{    exam_attempts       : "takes"

    %% Bookmarks
    users           ||--o{    bookmarks           : "has"
